# ai-craft

./: .gitignore  .prettierignore  .prettierrc  AWS_CloudWatch_for_Clients.md  CLAUDE.md  MCP_Registry_Plan.md  README.md  install.ps1  install.sh  package-lock.json  package.json  update.ps1  update.sh
agents/: README.md  code-review-agent.md  content-review-agent.md  dev-agent.md  dig.md  gemini-data.md  gemini-dev.md  git-workflow-agent.md  inter-ai-communication.md  sniff.md  tdd-agent.md  wag.md
claude/: README.md  code-review.md
docs/: GLOSSARY.md  agents-overview.md
lib/: colors.sh
mcp/: .gitignore  Dockerfile  MCP_Registry_Plan.md  pyproject.toml
mcp/mcp_registry/: crud.py  database.py  main.py  schemas.py
mcp/terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  providers.tf  rds.tf  s3.tf  secretsmanager.tf  variables.tf
