[project]
name = "mcp_registry"
version = "0.1.0"
description = "ZSoftly Model Context Protocol (MCP) Registry"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "SQLAlchemy",
    "python-dotenv",
]
requires-python = ">=3.11"
license = "MIT"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_registry"]
